logo and location icone update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="nav-1">
             <ul>
                 <li class="logo"><a href=""><div class="logo-inner"></div></a> </li>
-                <li class="deliver-to">Deliver <br> to israel</li>
+                <li class="deliver-to"><a href="#" class="deliver-to-content"><div class="location"></div> <div class="d-to-text"> <span class="">Deliver to</span>  <span class="contry">israel</span></div></a></li>
                 <li class="search-bar"><select name="departments" id="departments">
                         <option value="">All Departments</option>
                         <option value="">Arts & Crafts</option>
