finsh the first navbar

--- a/index.html
+++ b/index.html
@@ -14,42 +14,86 @@
     <section class="navebar-sec">
         <nav class="nav-1">
             <ul>
-                <li class="logo"><a href=""><div class="logo-inner"></div></a> </li>
-                <li class="deliver-to"><a href="#" class="deliver-to-content"><div class="location"></div> <div class="d-to-text"> <span class="">Deliver to</span>  <span class="contry">israel</span></div></a></li>
-                <li class="search-bar"><select name="departments" id="departments">
-                        <option value="">All Departments</option>
-                        <option value="">Arts & Crafts</option>
-                        <option value="">Automotive</option>
-                        <option value="">Baby</option>
-                        <option value="">Beauty & Personal Care</option>
-                        <option value="">Books</option>
-                        <option value="">Computers</option>
-                        <option value="">Digital Music</option>
-                        <option value="">ELectonics</option>
-                        <option value="">Kindle Store</option>
-                        <option value="">Prime Video</option>
-                        <option value="">Women's Fashion</option>
-                        <option value="">Men's Fashion</option>
-                        <option value="">Girls' Fashion</option>
-                        <option value="">Boys' Fashion</option>
-                        <option value="">Deals</option>
-                        <option value="">Health & Household</option>
-                        <option value="">Home & Kitchen</option>
-                        <option value="">Industrial & Scientific</option>
-                        <option value="">Luggage</option>
-                        <option value="">Movies & TV</option>
-                        <option value="">Music , CDs & Vinyl</option>
-                        <option value="">Pet Supplies</option>
-                        <option value="">Software</option>
-                        <option value="">Sports & Outdoors</option>
-                        <option value="">Tools & Home Improvement</option>
-                        <option value="">Toys & Games</option>
-                        <option value="">Video Games</option>
-                    </select> <input type="text"> <input type="button" value=""></li>
-                <li class="lang-menu"><a href="">language</a></li>
-                <li class="sign-in"><a href="">sign-in</a></li>
-                <li class="returns"><a href="">returns</a></li>
-                <li class="cart"><a href="">cart</a> </li>
+                <li class="logo"><a href="">
+                        <div class="logo-inner"></div>
+                    </a> </li>
+
+
+
+                <li class="deliver-to"><a href="#" class="deliver-to-content">
+                        <div class="location"></div>
+                        <div class="d-to-text"> <span class="d-to">Deliver to</span> <span class="contry">Israel</span>
+                        </div>
+                    </a></li>
+
+
+
+                <li class="search-bar">
+
+                    <div class="search-container">
+
+                        <select name="departments" id="departments">
+                            <option value="">All Departments</option>
+                            <option value="">Arts & Crafts</option>
+                            <option value="">Automotive</option>
+                            <option value="">Baby</option>
+                            <option value="">Beauty & Personal Care</option>
+                            <option value="">Books</option>
+                            <option value="">Computers</option>
+                            <option value="">Digital Music</option>
+                            <option value="">ELectonics</option>
+                            <option value="">Kindle Store</option>
+                            <option value="">Prime Video</option>
+                            <option value="">Women's Fashion</option>
+                            <option value="">Men's Fashion</option>
+                            <option value="">Girls' Fashion</option>
+                            <option value="">Boys' Fashion</option>
+                            <option value="">Deals</option>
+                            <option value="">Health & Household</option>
+                            <option value="">Home & Kitchen</option>
+                            <option value="">Industrial & Scientific</option>
+                            <option value="">Luggage</option>
+                            <option value="">Movies & TV</option>
+                            <option value="">Music , CDs & Vinyl</option>
+                            <option value="">Pet Supplies</option>
+                            <option value="">Software</option>
+                            <option value="">Sports & Outdoors</option>
+                            <option value="">Tools & Home Improvement</option>
+                            <option value="">Toys & Games</option>
+                            <option value="">Video Games</option>
+                        </select>
+
+
+
+                        <input class="search-input" type="text">
+                        <div class="btn-background">
+                            <div class="btn-search-img">
+
+                            </div>
+                            <input class="search-btn" type="button" value="">
+                        </div>
+                    </div>
+                </li>
+
+                </div>
+                <li class="lang-menu"><a href="">
+                        <div class="lang-container">
+                            <div class="lang-flag-container">
+                                <div class="lang-flag"></div>
+                                <div class="lang-arrow"></div>
+                            </div>
+                        </div>
+                    </a></li>
+                <li class="sign-in"><a class="sign-in-link" href="">
+                        <div class="sign-in-text">
+                            <span class="sign-first-line">Hello, Sign in </span><br>
+                            <span class="sign-second-line">Account & Lists</span>
+                        </div>
+                        <div class="lang-arrow"></div>
+                    </a></li>
+                <li class="returns"><a href=""><div class="return-and-orders"> <span class="return-first-line">Returns</span><span class="return-second-line">& Orders</span>   </div> </a></li>
+                <li class="cart"><a href=""> <div class="cart-content">
+                    <div class="cart-img"> <div class="counter">0</div> </div><span class="cart-text">Cart</span></div></a> </li>
             </ul>
         </nav>
         <nav class="nav-2">
