--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
 <body style="background: black;">
     <img src="https://images-na.ssl-images-amazon.com/images/G/01/gno/sprites/nav-sprite-global-1x-hm-dsk-reorg._CB405937547_.png"
         alt="">
+    <img src="2021-09-06.png" alt="">
 </body>
 
 </html>
