finshed with images section and started with description section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/narmalize.css">
     <title>Amazon.com</title>
@@ -91,21 +93,122 @@
                         </div>
                         <div class="lang-arrow"></div>
                     </a></li>
-                <li class="returns"><a href=""><div class="return-and-orders"> <span class="return-first-line">Returns</span><span class="return-second-line">& Orders</span>   </div> </a></li>
-                <li class="cart"><a href=""> <div class="cart-content">
-                    <div class="cart-img"> <div class="counter">0</div> </div><span class="cart-text">Cart</span></div></a> </li>
+                <li class="returns"><a href="">
+                        <div class="return-and-orders"> <span class="return-first-line">Returns</span><span
+                                class="return-second-line">& Orders</span> </div>
+                    </a></li>
+                <li class="cart"><a href="">
+                        <div class="cart-content">
+                            <div class="cart-img">
+                                <div class="counter">0</div>
+                            </div><span class="cart-text">Cart</span>
+                        </div>
+                    </a> </li>
             </ul>
         </nav>
         <nav class="nav-2">
+            <div class="nav-2-left-side">
+                <ul>
+                    <li class="all-hamburger-menu"><a class="all-hamburger-menu-wrap" href="">
+                            <div class="all-inner-image"></div>
+                            <div class="all-text">All</div>
+                        </a></li>
+                    <li><a href="">Today's Deals</a></li>
+                    <li><a href="">Customer Service</a></li>
+                    <li><a href="">Registry</a></li>
+                    <li><a href="">Gift Cards</a></li>
+                    <li><a href="">Sell</a></li>
+                    <li><a href="">Local Delivery in Isreal</a></li>
+                </ul>
+            </div>
+            <div class="nav-2-right-side">
+                <a class="nav-2-rght-side-link" href="">Amazon's response to COVID-19</a>
+            </div>
 
         </nav>
         <nav class="nav-3">
 
+            <ul>
+                <li><a class="nav-3-list-item " href=""><span class="nav-3-link-chicked">Toys & Games</span></a></li>
+                <li><a class="nav-3-list-item" href=""><span>Kids Gift Guide</span></a></li>
+                <li><a class="nav-3-list-item" href=""><span>Shop Toys by Age</span></a></li>
+                <li><a class="nav-3-list-item" href=""><span></span>Shop Toys by Character</span></a></li>
+                <li><a class="nav-3-list-item" href="">Shop Best Selling Toys</span></a></li>
+                <li><a class="nav-3-list-item" href=""> Shop Newly Released Toys</span></a></li>
+                <li><a class="nav-3-list-item" href=""> Shop Amazon Exclusive Toys</span></a></li>
+                <li><a class="nav-3-list-item" href="">Shop Toys Deals</span></a></li>
+                <li><a class="nav-3-list-item" href="">Create a Birthday Gift List</span></a></li>
+
+            </ul>
         </nav>
+    </section>
+    <section class="body-sec">
+        <ul class="catagory-tree">
+            <li class="catagory-name"><a href="" class="catagory-name-link catagory-1">Toys & Games</a><span
+                    class="catagory-arrow"> > </span></li>
+            <li class="catagory-name"><a href="" class="catagory-name-link catagory-2">Learning & Education</a><span
+                    class="catagory-arrow"> > </span></li>
+            <li class="catagory-name"><a href="" class="catagory-name-link catagory-3">Electronic Learning Toys</a></li>
+        </ul>
+
+
+        <div class="prodact-info">
+
+            <div class="images-container">
+                <div class="small-pec pec-1"></div>
+                <div class="small-pec pec-2"></div>
+                <div class="small-pec pec-3"></div>
+                <div class="small-pec pec-4"></div>
+                <div class="small-pec pec-5"></div>
+                <div class="small-pec pec-6"></div>
+                <div class="small-pec pec-7"></div>
+                <div class="main-image"></div>
+            </div>
+            <div class="description-container">
+                <h1 class="description-h1"><span class="description-title"> VTech DidiZoom Smartwatch DX2,<br> Black
+                        (Amazon Exclusive)</span></h1>
+                <div class="vtech-stor"><a class="vtech-stor-link" href="">Visit the VTech Stor</a></div>
+                <div class="average-customer-reviews">
+                    <div class="star-rating">
+                        <div class="stars-container">
+                            <a class="a-stars" href="">
+                                <div class="stars"></div>
+                                <div class="stars-arrow"><i class="fas fa-chevron-down "></i></div>
+                            </a>
+                        </div>
+                        <a class="rating" href="">14,327 ratings </a>
+                        <span class="wall"> | </span> <span class="questions"><a href="">713 answered
+                                questions</a></span>
+                    </div>
+                </div>
+
+                <div class="amazon-choice-wraper">
+                    <div class="amazon-choice"></div> <span class="amazon-extra-text">for "<span
+                            class="amazon-choice-link"><a href="">gizmo watch for kids</a>"</span></span>
+                </div>
+
+                <table class="price-table">
+                    <tr>
+                    <td class="orginal-price-label">List Price</td>
+                    <td><span class="orginal-price">$62.99</span><a href=""> Details</a></td>
+                    </tr>
+                    <tr><td class="descount-price">price:</td><td><span class="descount-price-num"> $60.06 </span>  <span> + no import fees Deposit & $15.39 Shipping to <br> Isreal(<span> free Sipping </span> to Israel when you spend over <br> $65.00 on eligible items) <a href="">Details</a></td></tr>
+                    <tr><td>You Save:</td><td><span class="descount-saving">$2.93 (5%)</span></td></tr>
+                </table>
+            </div>
+            <div class="buy-add-to-cart-container"></div>
+        </div>
+
+
+
+
+
+
 
 
 
     </section>
+
 </body>
 
 </html>
