working on the purchesebar

--- a/index.html
+++ b/index.html
@@ -191,24 +191,24 @@
                     <hr class="light-border">
                     <table class="price-table">
                         <tr>
-                            <td class="orginal-price-label">List Price</td>
-                            <td><span class="orginal-price">$62.99</span><a href=""> Details</a></td>
+                            <td class="orginal-price-label grayesh-color">List Price</td>
+                            <td><span class="orginal-price grayesh-color">$62.99</span><a href=""> Details</a></td>
                         </tr>
                         <tr>
-                            <td class="descount-price">price:</td>
-                            <td><span class="descount-price-num"> $60.06 </span> <span> + no import fees Deposit &
+                            <td class="descount-price grayesh-color">price:</td>
+                            <td class="grayesh-color"><span class="descount-price-num"> $60.06 </span> <span> + no import fees Deposit &
                                     $15.39
-                                    Shipping to <br> Isreal(<span> free Sipping </span> to Israel when you spend over
+                                    Shipping to <br> Isreal(<span class="bolded"> FREE Shipping </span> to Israel when you spend over
                                     <br>
                                     $65.00 on eligible items) <a href="">Details</a></td>
                         </tr>
                         <tr>
-                            <td>You Save:</td>
+                            <td class="grayesh-color"> You Save:</td>
                             <td><span class="descount-saving">$2.93 (5%)</span></td>
                         </tr>
                     </table>
 
-                    <p class="description-para">Available at a lower price from <span><a href=""> other sellers
+                    <p class="description-para ">Available at a lower price from <span><a href=""> other sellers
                             </a></span>that may not offer free Prime shipping.</p>
                     <div>
                         <label class="small-watch-color-label" for="">Color:</label><span
@@ -297,6 +297,16 @@
             </div>
             <div class="buy-add-to-cart-container">
 
+                <div class="purchese-description">
+                    <p class="descount-price-num descount-price-num-purchese">$60.06</p>
+                    <p class="first-p grayesh-color">+ No Import Fees Deposit & $15.39 Shipping to Israel (<span class="bolded">FREE Shipping</span> to Israel when you spend over $65.00 on eligible
+                    items) <a href="">Details</a></p>
+                    <p class="second-p ">This item ships to <span class="bolded">Israel</span>. Arrives: <span class="bolded">Tuesday, Oct 5</span></p>
+
+                    <div class="location-2"> <div class="location-2-icone"></div> <a class="location-2-text" href="#">Deliver to Israel</a></div>
+                </div>
+
+                
 
                 <div class="share">
                     <a class="share-link1" href="">share</a>
@@ -313,7 +323,6 @@
                         <div class=" pinterest"></div>
                     </a>
                 </div>
-                <div class=""></div>
 
             </div>
         </div>
