working on the purchesebar

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                                 </a>
                             </div>
                             <a class="rating" href="">14,327 ratings </a>
-                            <span class="wall"> | </span> <span class="questions"><a href="">713 answered
-                                    questions</a></span>
+                            <span class="wall"> | </span> <a class="questions" href="#">713 answered
+                                questions</a>
                         </div>
                     </div>
 
@@ -196,9 +196,11 @@
                         </tr>
                         <tr>
                             <td class="descount-price grayesh-color">price:</td>
-                            <td class="grayesh-color"><span class="descount-price-num"> $60.06 </span> <span> + no import fees Deposit &
+                            <td class="grayesh-color"><span class="descount-price-num"> $60.06 </span> <span> + no
+                                    import fees Deposit &
                                     $15.39
-                                    Shipping to <br> Isreal(<span class="bolded"> FREE Shipping </span> to Israel when you spend over
+                                    Shipping to <br> Isreal(<span class="bolded"> FREE Shipping </span> to Israel when
+                                    you spend over
                                     <br>
                                     $65.00 on eligible items) <a href="">Details</a></td>
                         </tr>
@@ -299,14 +301,87 @@
 
                 <div class="purchese-description">
                     <p class="descount-price-num descount-price-num-purchese">$60.06</p>
-                    <p class="first-p grayesh-color">+ No Import Fees Deposit & $15.39 Shipping to Israel (<span class="bolded">FREE Shipping</span> to Israel when you spend over $65.00 on eligible
-                    items) <a href="">Details</a></p>
-                    <p class="second-p ">This item ships to <span class="bolded">Israel</span>. Arrives: <span class="bolded">Tuesday, Oct 5</span></p>
+                    <p class="first-p grayesh-color">+ No Import Fees Deposit & $15.39 Shipping to Israel (<span
+                            class="bolded">FREE Shipping</span> to Israel when you spend over $65.00 on eligible
+                        items) <a href="">Details</a></p>
+                    <p class="second-p ">This item ships to <span class="bolded">Israel</span>. Arrives: <span
+                            class="bolded">Tuesday, Oct 5</span></p>
 
-                    <div class="location-2"> <div class="location-2-icone"></div> <a class="location-2-text" href="#">Deliver to Israel</a></div>
+                    <div class="location-2">
+                        <div class="location-2-icone"></div> <a class="location-2-text" href="#">Deliver to Israel</a>
+                    </div>
+                    <span class="in-stock">In Stock</span>
+
+                    <div class="select-wrapper">
+                        <div class="select">
+
+                            <select name="num-of-items" id="num-of-items" class="num-of-item-select">
+                                <option value="1">1</option>
+                                <option value="1">2</option>
+                                <option value="1">3</option>
+                                <option value="1">4</option>
+                                <option value="1">5</option>
+                                <option value="1">6</option>
+                                <option value="1">7</option>
+                                <option value="1">8</option>
+                                <option value="1">9</option>
+                                <option value="1">10</option>
+                                <option value="1">11</option>
+                                <option value="1">12</option>
+                                <option value="1">13</option>
+                                <option value="1">14</option>
+                                <option value="1">15</option>
+                                <option value="1">16</option>
+                                <option value="1">17</option>
+                                <option value="1">18</option>
+                                <option value="1">19</option>
+                                <option value="1">20</option>
+                                <option value="1">21</option>
+                                <option value="1">22</option>
+                                <option value="1">23</option>
+                                <option value="1">24</option>
+                                <option value="1">25</option>
+                                <option value="1">26</option>
+                                <option value="1">27</option>
+                                <option value="1">28</option>
+                                <option value="1">29</option>
+                                <option value="1">30</option>
+                            </select>
+
+                        </div>
+
+                    </div>
+
+                    <input type="button" value="Add to Cart" id="add-to-cart-btn" class="add-to-cart-and-buy-btn">
+                    <input type="button" value="Buy Now" id="buy-now-btn" class="add-to-cart-and-buy-btn">
+
+
+                    <div class="security-announcement">
+                        <div class="security-icone"></div> <span> <a href="">Secure transaction</a> </span>
+                    </div>
+
+                    <p>Ships from and sold by Amazon.com.</p>
+
+                    <div class="return-policy">
+                        <p> Return policy: <a class="return-policy-link" href=""> Refund or replacement available</a>
+                        </p>
+                    </div>
+                    <label for="add-to-easy-return" class="add-to-easy-return"><input type="checkbox"
+                            name="add-to-easy-return" id="add-to-easy-return"><span>Add a
+                            gift receipt for easy returns</span>
+                    </label>
+                    <hr class=" buy-add-to-cart-light-border">
+
+                    <button class="add-to-list-btn">Add to List</button>
                 </div>
 
-                
+
+                <div class="new-3-from-container">
+                    <div class="new-3-from"><span>New (3) from </span> <span class="price">$55.13</span></div>
+                    <div class="new-3-arrow"></div>
+                </div>
+
+
 
                 <div class="share">
                     <a class="share-link1" href="">share</a>
